# evidence_datasource_parsers

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .travis.yml  CommandLine.py  INSTALL-CONDA.md  README.md  Snakefile  __init__.py  configuration.yaml  environment.yaml  logger_config.yaml  missing_efos.csv  ontology_config.ini  pyproject.toml  pytest.ini  requirements-freeze.txt  requirements-frozen.txt  requirements.txt  settings.py  setup.py  setup.sh
.circleci/: config.yml
common/: EFOData.py  GCSUtils.py  HGNCParser.py  RareDiseasesUtils.py  Settings.py  Utils.py  __init__.py  evidence.py  ontology.py  spark.py  variant_rsid_mapping.py
envs/: README.md  conda-env.yml  environment-lock.yml  environment.yml  lock-conda-linux-64.txt  requirements.txt
evidence_parsers/: cli.py  settings.py
modules/: AzGeneBurden.py  BrainCRISPR.py  CRISPR.py  ChEMBL.py  ChemicalProbes.py  ClinGen.py  CvdiGeneBurden.py  EPMC.py  Essentiality.py  GEL_updated.py  GEPanelApp.py  Gene2Phenotype.py  GeneBurden.py  GenebassGeneBurden.py  GeneticsPortal.py  GeneticsPortal_prepare_data.py  GenomicsEnglandPanelApp.py  IMPC.py  IntOGen.py  MouseModels.py  OTAR_CRISPR.py  Orphanet.py  PROGENY.py  PanelApp.py  PanelAppRevamp.py  Pharmacogenetics.py  PheWAS.py  PheWAScat.py  PhenoDigm.py  ProjectScore.py  RegeneronGeneBurden.py  RewriteGenomicsEngland.py  RewritePheWAS.py  RewriteProgeny.py  SLAPEnrich.py  SystemsBiology.py  TEP.py  TargetSafety.py  UKBiobank.py  UniprotLiterature.py  (+13 more)
partner_preview_scripts/: ValidationLab.py  ValidationLab_parameters.json  encore_parameters.json  encore_parser.py  ot_crispr.py
resources/: DDG2P_14_5_2017.csv  cancer2EFO_mapping.tsv  cancer2EFO_mappings.tsv  (+13 more)
(+269 files in other folders)
