[tool.poetry]
name = "evidence-datasource-parsers"
version = "2.4.0"
description = "Open Targets internal evidence generation pipeline"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.0"
gcsfs = "^2023.12.2.post1"
google-api-python-client = "^2.115.0"
google-cloud-storage = "^2.14.0"
google-crc32c = "^1.5.0"
numpy = "^1.26.3"
ontoma = "^1.1.0"
openpyxl = "3.1.2"
opentargets-validator = "^1.0.0"
pandarallel = "^1.6.5"
pandas = "^2.2.0"
pronto = "^2.5.5"
requests = "^2.31.0"
retry2 = "^0.9.5"
snakemake = "^8.3.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
