[project]
name = "evidence_datasource_parsers"
version = "2.5.0"
description = "A collection of modules which generate evidence for several internal data sources."
authors = [{ name = "Open Targets core team", email = "data@opentargets.org" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "gcsfs==2023.6.0",
    "google-api-python-client==2.74.0",
    "google-cloud-storage==2.7.0",
    "google-crc32c==1.5.0",
    "numpy==1.24.1",
    "ontoma==1.1.2",
    "openpyxl==3.1.2",
    "opentargets-validator==1.0.0",
    "pandarallel==1.6.4",
    "pandas==1.5.3",
    "pronto==2.5.3",
    "pyspark==3.3.2",
    "requests==2.32.0",
    "retry2==0.9.5",
    "scipy==1.10.1",
    "snakemake==7.20.0",
    "openai==1.8",
    "PuLP==2.7.0",
    "setuptools>=65.0.0"
]